--- a/General/GUI/EditorialEdicion.resx
+++ b/General/GUI/EditorialEdicion.resx
@@ -120,89 +120,84 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADS0lEQVRIS51VS08TURQedGEIlBQa2mlpE5cipQ9jawjPjQtD2BqjJj4SDQKJLnXrnxB050LjwsRE
-        gW2hlYeoMZHQBxVckPgkdAqGFgfwfHfubaedoRRP8qW395z7nbnndaVDxE0YJkwS4oQtDqwnCNDB5sji
-        Ijw+LtXkztc2fnrR3Br56DrzPu0OLwNYYw862JDtGMGJg9XIAEG5XG+PrXrCq2uec/uV8NUdXhtqcL6r
-        kaQMnetnDBVk5ETNsc0pp2/ajKwSYrJ/tpbOEseQRmWUARjE3WcXceCV/fTU3QZXdM0TzpWT6fD3vtUz
-        /az5VAT/cZY7MdzERVdUYnJgBoYgb7RaM36//8ulOvs87eU5YQn5dYtjFjZWq1V5yp1My74ZHq6SnDy5
-        aXEw8knZGwW5oiiLe3t7G93d3akrdfY50umdMPJAIJDc3d39kc1mEzabTXlpb52CHjriHNWoqcxQCSKh
-        D+jK+Co6+GufhJysd3R0JK5qTnYEeSgUSpHNb9jQ7zrODFtcMXCAi1dXCxyMoNyg4BBXX6aD37mTTG9v
-        b/xavWNW/+VC19XVldRCWcwXOImbJXwCNa1zUHDS3t6eJqJvgqivr2+pnJxCmDQJ4f5zyglxv4GDJDXO
-        B72SQ71lked9Ph/CxW5CkiNsY0HkG52dnfGL9c2UO2OloRmJGx0vZdGd5QYczAndZIU4t0DMJd/T07OE
-        kJEN8mI4m3aHUuDmDkIpMyOCetsizyGhRPpH42aSw94hDpLCQQLXMTFSBy2ukmohgRN2E+xBd3CIggvE
-        zUI0bpJkIne+1SdUELa1ta2oqspyIvYqJPk1HAyXlamKejYjR0gAr9eLxLPqEroDyvQOHJQ02sPGkxHe
-        aKKJGIGu0XawDgaDKOGfwgZntNlVaLRt4sbYZzKGuodSjAqSz4LcJAQ72OPNiFERtzU1ZTDDoAcXcT7S
-        qDVxYkBhUMGgymGXhw42sBXkfNhtEKesURel/+jjOpy719ASxa3xXzeuL2iURhmiBycb+Y8HJ1p8cFhi
-        Kwkei0y1T+YK2dygmPOwHPjl5YL4jaK6UG6oaTRO8dEPLmAPOj6WkVBDzKsRzHNceZywREAIAKwxKQcJ
-        hVI0iiT9AzD8mebIxTMlAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANLSURBVEhLnVVL
+        TxNRFB50YQiUFBraaWkTlyKlD2NrCM+NC0PYGqMmPhINAokudeufEHTnQuPCxESBbaGVh6gxkdAHFVyQ
+        +CR0CoYWB/B8d+5tp52hFE/ypbf3nPudued1pUPETRgmTBLihC0OrCcI0MHmyOIiPD4u1eTO1zZ+etHc
+        GvnoOvM+7Q4vA1hjDzrYkO0YwYmD1cgAQblcb4+tesKra55z+5Xw1R1eG2pwvquRpAyd62cMFWTkRM2x
+        zSmnb9qMrBJisn+2ls4Sx5BGZZQBGMTdZxdx4JX99NTdBld0zRPOlZPp8Pe+1TP9rPlUBP9xljsx3MRF
+        V1RicmAGhiBvtFozfr//y6U6+zzt5TlhCfl1i2MWNlarVXnKnUzLvhkerpKcPLlpcTDySdkbBbmiKIt7
+        e3sb3d3dqSt19jnS6Z0w8kAgkNzd3f2RzWYTNptNeWlvnYIeOuIc1aipzFAJIqEP6Mr4Kjr4a5+EnKx3
+        dHQkrmpOdgR5KBRKkc1v2NDvOs4MW1wxcICLV1cLHIyg3KDgEFdfpoPfuZNMb29v/Fq9Y1b/5ULX1dWV
+        1EJZzBc4iZslfAI1rXNQcNLe3p4mom+CqK+vb6mcnEKYNAnh/nPKCXG/gYMkNc4HvZJDvWWR530+H8LF
+        bkKSI2xjQeQbnZ2d8Yv1zZQ7Y6WhGYkbHS9l0Z3lBhzMCd1khTi3QMwl39PTs4SQkQ3yYjibdodS4OYO
+        QikzI4J62yLPIaFE+kfjZpLD3iEOksJBAtcxMVIHLa6SaiGBE3YT7EF3cIiCC8TNQjRukmQid77VJ1QQ
+        trW1raiqynIi9iok+TUcDJeVqYp6NiNHSACv14vEs+oSugPK9A4clDTaw8aTEd5oookYga7RdrAOBoMo
+        4Z/CBme02VVotG3ixthnMoa6h1KMCpLPgtwkBDvY482IURG3NTVlMMOgBxdxPtKoNXFiQGFQwaDKYZeH
+        DjawFeR82G0Qp6xRF6X/6OM6nLvX0BLFrfFfN64vaJRGGaIHJxv5jwcnWnxwWGIrCR6LTLVP5grZ3KCY
+        87Ac+OXlgviNorpQbqhpNE7x0Q8uYA86PpaRUEPMqxHMc1x5nLBEQAgArDEpBwmFUjSKJP0DMPyZ5sjF
+        MyUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnGuardar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAACFklEQVRIS2MAAgVBMdmnkko6L0BYTEb1jZCo+C99E8sf6FheSfWXiLjUX3kVdRQsq6T6l4OL+5+k
-        su4bQWnVD0AzlUEGw4C7R0Ltl6Z1j/+DcMHUw//DE9L/33z+BgP3TJ3538rN539kTtl/a1fv/xYObv89
-        wxP+B6cX/JdRUv3fsObB/7DWff+FZTVvQs0GA7Is0NTV/z9t4ar/JlZ2YAsUNXX/N659+L9u9aP/el65
-        f4TEFZOh5pNngZ6x2f81Ow/DLQjPKgHrB+HsOTf+iyjogYKKm2wLpOUU/ju6ef03s3UCWyCnqgH2AciM
-        xrWP/+sHlP8Dmu2MYUH5ggtATc7/dx07/X/PibMouKWn/7++uc1/37i0/x4RCf+dAyP++8Sk/ncNi/0v
-        LiMHNPgRxAIgNgyqAVngjmEBCEdXzgFqysaKnYLT/tv7J6Jga8+I/0lNK+H6CVpAKR61gCAeOAuqllz7
-        n9C44n98wzKycGLTqv91K+/gtsDI1vN/XnnN/8KqWrJwSk7hf0f/ONwWGNu4gnPs5YfP/p++cYckfO3x
-        i/+nbz78b2rritsCn0hIEVHX1vnfw9efJDxpznzCFizaewul7CEVE7TA1M4DrLC2tQOrK/FhonwAiwNy
-        MdEWDH0fVDQ0/beysycJ98+YPXA+ADVbnoCaLFw8fFibK8RiQzPL39y8/L8llfVeC0mrf2JgYJAHABNs
-        dMVzZpv5AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIWSURBVEhLYwAC
+        BUEx2aeSSjovQFhMRvWNkKj4L30Tyx/oWF5J9ZeIuNRfeRV1FCyrpPqXg4v7n6Sy7htBadUPQDOVQQbD
+        gLtHQu2XpnWP/4NwwdTD/8MT0v/ffP4GA/dMnfnfys3nf2RO2X9rV+//Fg5u/z3DE/4Hpxf8l1FS/d+w
+        5sH/sNZ9/4VlNW9CzQYDsizQ1NX/P23hqv8mVnZgCxQ1df83rn34v271o/96Xrl/hMQVk6Hmk2eBnrHZ
+        /zU7D8MtCM8qAesH4ew5N/6LKOiBgoqbbAuk5RT+O7p5/TezdQJbIKeqAfYByIzGtY//6weU/wOa7Yxh
+        QfmCC0BNzv93HTv9f8+Jsyi4paf/v765zX/fuLT/HhEJ/50DI/77xKT+dw2L/S8uIwc0+BHEAiA2DKoB
+        WeCOYQEIR1fOAWrKxoqdgtP+2/snomBrz4j/SU0r4foJWkApHrWAIB44C6qWXPuf0Ljif3zDMrJwYtOq
+        /3Ur7+C2wMjW839eec3/wqpasnBKTuF/R/843BYY27iCc+zlh8/+n75xhyR87fGL/6dvPvxvauuK2wKf
+        SEgRUdfW+d/D158kPGnOfMIWLNp7C6XsIRUTtMDUzgOssLa1A6sr8WGifACLA3Ix0RYMfR9UNDT9t7Kz
+        Jwn3z5g9cD4ANVuegJosXDx8WJsrxGJDM8vf3Lz8vyWV9V4LSat/YmBgkAcAE2x0xXNmm/kAAAAASUVO
+        RK5CYII=
 </value>
   </data>
   <data name="label5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAWIAAAFiAV8n0FMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAJsElEQVR4Xu2bB1RUVxrHaQMIDkXAMiMqFgTELqhYwAIcMTY0NliKWIImSEQRLKi4RlRkQTf2th4S
-        Na7u2kvsrppkRfcYg0aJxlU3GI1RZkBXlG/v9z3eY8rDDMMbc2C55/yYN7f//++92wCzulAX6kJtD60Y
-        0xgZjHoY8f8QrBiRjAsM0GA8o9aH0YzbDBLdpLE9DA515w3IYtTaoGAcZZDY/kGesP+vk6H0WTJc/cdw
-        3oB9jFoZ+pmbmxWyT3Bv6gR/2RgJULKKQ50K318ZxRtwADPXpmDOSGO8YcC0KX3gxdOVFeLJgFlw+dww
-        3oD9jFoTLBjrGSCX25Z9kRsLZcU5kDorGLauj9AwIBH25A7gDVjDqBVBxtjBgEYN5WVXv5pNYj/Nfp+E
-        9uzuUWGAaipkLe3OG5DMqFLwYKQzcA6VikSGN0M3+DAwTayMLscY4NHcBQqup5HQ7/LmQL16MrCysoCv
-        zyWVG/AngKI4GDeqFW/AIIZBAd+tePZDzT75wlJSxviC4VzO7vI4sbyiKBWOcCd/AQl9+WsWdOqgpPjF
-        aYPLxTOK/0gGKBX2mIbjBLalF1As3xHEi3GSITQ2ZsRA+Gz9omqzfU0azEuKBWUTN77u/HIoDtMwj1hZ
-        ZEhobyrn0sAe8q/MFYQumDuI4nsHtITXquwKA9QpcOsq91ownjFQm6ZW1G52icFnEvBp5gaxoZ3penHq
-        ZHjx8Kxk/Pz9EQgO8hfawmuME8vLc+HwBrCxloFMZgmnj34kiMRH38bGCuzsrIXXQYC9/8vS/YR2REDt
-        ZmBhaQWu7i3BqRH3GPX0cYcXh+ZBzlTOWakNQJ7dPQF29WwJvBbLw1N48zA0d29MfcnJHCkIfKPOgV49
-        W1J8xuKh2uKLl9Hj362zK6UrG9jRJ2q0U3iAOdOM3xlc5OqC1zBzzyWKDO/tDWXHF5rUAMRBbk+IpWky
-        OYqbx4eE+dJUx4vcuGYcxXdsr4TSIo1HHylfALEFEviwxdFw/+aUN2nPRRh6oRRsXBX0nWGcAap7p+DE
-        3tVwaGfWb/L18c165RFDDWjRrAkTYg6P7i0RBD4rXAYN3eRgYWEOX53lR30eZlLRFJge3476vzzSD0ZI
-        bcD8mRP4Cgzi8sltenUYYsAvBcdIZDN3Zy2RSdP7U73Rkf5a8YR6ERT9JwocHazBytICHq4fK70Beae2
-        wfhRIRD+XtBvMi1uJDz94bheHW8z4Kcbh2BVxgx6yrAPIQO9BIG3v50P1taWYG9vDQ8KFmuLR1QfwZ8z
-        e1I5fPTf7IqV3gApeJsBaBq27ezkQJ8JUwMFgePHdKO49Plh2sKR4qVQ9jwOvNs6UZ7smO41z4BHbNR3
-        kHOjNs/aVaNJ4LV/ptArge+/+nGmvgGqJNi/K1golxPbQ1oD7lzZAxePbDCaX+98KdSlawCmYZ7UxGiu
-        H8M6gl/XZnT9zfmZJHD4kA70fWXGCH3xJcvp7nfp6EJ5EEkNuH9tH8ishPnTKHDRU5kBof2FTQtx+cIs
-        KPllJVy5lEwCr+el0mygaOJI8XoGqGZA7qYgrTokNaD4/mmYEj1cdKAzlI3ZqZUasHX1POjQrjW1GdBD
-        Y0dXzoToHpSWtUz37rNpTz0XMpd0B0tLc658V0/6lPwVkBJdA5CQftwSeef2GC2RhT8uAVtbGTg4sJUj
-        WwMIacXZ8PJJIsREtKFyuFxemxEPiz7mToFqlAHXzucKj/ir52wrq2HAnOQQTgCb/yvis+DBzRjw68Jt
-        rhSNXeH8oXWgvr3LdAbg/Jx/cYfR4AqSr0vXgKkTwqk93elN9fMKaOBsR3v9H28urEgrXgHhQz14IeDf
-        xce0Bjz4dj/Y2ljzBY1icHBApQZ4teE6iQsdTQNwA4TxY0Z10YpHTh+dAIOCmwrvfnxsuOkMwLsXM24w
-        9O/T1Whyls6o1IBxI7nHXPP9x81Pm9bcI66/5scTnw/h8y3cyO/m6kTTtElfASnRNSB33UJqL2JsN0Hk
-        uS+nU5z+rMB2f6oEOvCQ15fR4mj/ZyuonhprAK4ArWVW9L7z29vYKG7q28S2vhXi2bSnSoSXj2OERU9y
-        QqRQj0kNeHzrqOjgZgg3Lu2Eonsnhbp0DSh5cIYGMmzzzLEEWurK5TZ02Pm8cHmFeDVbFRbFQfxEb8rr
-        7dmCZhAcoLEekxnw8PoB6nB5QaMYFtZXEKxrAC6U+Hw43W3bEEnX40Z3rbj76hQSv2sbtx3WBE+X7l7d
-        azoD8O7hwWTnDm2NJjM9oVIDMA3zYJuebRpCYB9uVXhkXzwTzwY8VTL890ksiXeQW9OaoVN7T6Hu90J6
-        0flBjR0DeHy9uHM+FNiksQO8LkqD774ZDR9P82UjvS3fcZj5YYReWaTGG4ADWnnnoGN7V+jp31D4bmlp
-        AWEDA2D31k9ozNAti5jUAHwNfso/aBzlgxSPmAGYZ1/uCr5zAm6uzpD4wVg6WhOtm8EPsCYzABtxdeFO
-        WowlYlSoIFbXADxiEytjKC4NHOHev/5uOgPw/D4woDN4NFcYRasWSjpMrcyA9JRJlMfRoT61i8dhYvVU
-        BvYNp+kaPwYMHxxI7e7dnqGXZgg12gD1v0/Tncd9Pd5NzTRDqdEGnN73KbU5oG83rfiqYDID8Hd0TRUV
-        U5IxRI0ZJHRU14BJfxD+lMUo3JWNqI8mMwB/udG7R0fRAchQkqaNr9SABclxomUMxa+zD22oavwgWF3q
-        DKgzYIe0BqSnTISS+yck4cXDivW7tgFnoOTeUSi+e5BxwHh++Buo8rdIa8CUiAFwbndatblxKhOeX98C
-        6lufM7HHBANQtOrGNpa2GfJPrhAtW1Wwz9h3ow14c2wBRAd34jNJRmM3R0iZOhQe5a0FeX07ovDyWpgd
-        PwQauTqKlqkOUYGt4fXOKhowopc3TB/BncW5ONjB+33bVRuss5unAizYHh/rbd/WHWxtZIRv26YUh2l+
-        bZWUV6yOqoJ9x3oTwnyq9icyttbcL0Bd5PUgb1U0vDk4SzJub5oEfX05wZoE+rpDwebJomWMBfuOGrB+
-        W5klfRpkAM8HIV6wblKA5KyM8hc6hOA1xonlrS6oQVPTWw2Yc+SaVubayOwDeZUbgIxfugGGzvrEpMhd
-        uP1EiwlpBF5jnFheKUFtObdLIfT8K20D7BoqIS6v9J3h5ME9lr0PPyHw2pnFTblSalIms7bDL72CoLM6
-        Blja2oNiyMR3hlV97lhN0wCME8trKlAzZ4C5Of2rye+B15wthFjau8H8Kfs0UzIGvmNuMnQ7VMAQy2tK
-        8P8hfpcQwND9J4h+jLpQF+rCuwxmZv8DYgNjscc/x8oAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        2AAAAdgB+lymcgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAfJSURBVHhe7ZoJ
+        UBNXGIA3AUIENBzhEhQBUZSC2mjVoTqVwSpgtTqoo7VKoVqreLVYptOqU2sr2urgUa1X1cpU69l6Iiod
+        EdSiqOMBeDCCVkVQGFDxIPD3vbd5i0k2MQdkY5t/5hvY3Zd97/+y5//CaESMSCSqQn/hNQOPOQ5hduxC
+        gE9bf2gXEKROhyAICLQ+/PzbUQl7cQLmxj4E7DtxEYofNKpRUt0IFXVgdZy8UEwFZOIEzA2bAIRNAJ+A
+        vCu3YOf+I7zsOnAUSspruEHdrnoKuw9l87Y1h/PXbqklj7GIgMIKJbh5eNCOeOk9KAr2l18lvJf0IW8b
+        c3F1c4e7tfWWF3D53nO2E2cJ2MWGEqRxYeA/og9Hz9WfwrtnlxB6b5qB1vVV286H7+A32f26+ADTcyJB
+        9NZEEEdqwzi5kbZlD54IJ0DkJwNp5kSC/Ggyl7Cp9D8whx18QCSI5isJ4oVKcFihjcinq00AbmsTYBNg
+        E2ATYBNgEyCUAA9nkCyMJcgWDwPFqk/MIuK7cezgvcJANOEwS9JhsE/WRuQeIJyAK+UvwM7ennYkGGI7
+        O/in+pnlBWDmLV4O4xMnCcoPy1erJW9RAf/71+GdR07CjyvXGM3SVevgwvXbZLC3HtbBql8yeNsZwoHs
+        PC0B54pLqYA/cQLmBq8A/Drs5OxCOzKa2KHDyWDX/rqNd7uhOLu4wP0n2kfiF19/U4q2d0OYHbwC6F3A
+        3UMOc75NI8xdkAZpafykpKSA/UsXzaiBg8lAb1Y8gkXpP3H7MJYd+7K0ksdU1sFp1E+zhF4BQR1DuE4f
+        PgXeKCwshODgYNI+MDBQTUBLYTUCsrKywNXVlbSNj4+HgoICNQHX7lbBl/MWwLTPU01i3Zbfuf4p+LbY
+        JeyNR6ifFITZYbKANWvWgIODA4hEIkhNTYWGhgYoKipSE4ATwMum0qaNTOsaYNEnQT4BSqUSpk+fTrY7
+        OjrCli1b2A0oNAXcqXkBW/84COsztpvEiYLLXP8UQQXU1tZCXFwc2SaXyyEnJ0eVOhuaAloCwQScvXID
+        unTpQtaHh4dDaWmpKu2m0BRwseQOfJCQBENHjDSJ+YuWcv1TBBGw/1gu+sY9ybqYmBioqalRpawemgI2
+        bdtNB2sSXt4+wl8D0ldvAIlEQpbxuY8vdrqC7xTIO18ER/LOmkTx7Uq15DEWFWCH3sbwXyxg5dqNqjR1
+        x3/uGkBxc3OHbj0UoFDoJywsjLSnAk5fvAb93okinzWFydNmCSOgqLIBOgSHcAKMZeqs2WSw2/ce5o4i
+        UwgO6STMNYBIKH9KnuSM5fq9arUBl1Y+5m1nCJrzghiLCbj2oJ53UJbk3iOlMALwKRAaFk47EowgdBqW
+        P26wvAB6EXQUi0HRxo1F5g4KuZfFkKquHYJWhUOcXKBh0EiWIWOh8eMZzcKjhClwY3QCx/1xk7TadHV1
+        N1VAB0SQikCECKEzLC5AmTQd/F1a0yQIYvRGeW64+v5NFDAfwe1XxTKEzrC4gLqPksm+JVIn6NQ9Etw8
+        25Jl71ZOENRaxiERs6dA+w6BoONncnWIEg1wnQDadQyHgM49aDuco87QK6Al8fIPhiX7bkL/YUm8280h
+        efEOmL3yMF02XgAmZli8mvnmAn+juE/HVs7Q7e1Y8PRjl3csZODFSfMYM4gV0DGiL3Tu0c88AS01L4Bv
+        a+gtrxH3SxGLGfh7I39SxpA6vmmfL7ECoTMsLgBTdKsCeih6kQHuXsRAyR42gdx1DKxKNZ71XzFQnsnA
+        kxwGzmxuOhIQsxBihM7QKWBuWjpvkcIQxk5IJJMj+goick8vMsirO9nkq4+h00IiogM3moQhTUfCzDHc
+        +hEIvaFTgLevn1oHxoJreoYURKiAOwfZZW8fX64qPDMllRRc+UhMTCQFWbqfUdHNLOBU8R3eIoUh5J4r
+        5A53XQURegpoCsDr6Wern6kKDRpx6dIlbg7Cz4/9oppdQEtPjuI6Ae7bWAGZmZkgk8nYpEeNguzsbPb/
+        5hYwcVoKb5HCEHByx89c1FsQcWnNPg0aIwDPReApODoX0diIjtRTp7QEzEniBEQj9IZOAYEdO9GdGA0u
+        gvy254BBBRFDBNTX10NyMvsEKZVKISMjg92Agk/AXbSvKfHMz2i9HUJv6BRgakEEg4sgNAldBZE+keyD
+        yqsEVFVVQVQUe7r4+vpCfn6+KnU2+ASoSETrXxlWfQ0ouHIdQkNDyfqIiAgoKytTpd0UugQ8Oc4kofWv
+        DKsVsPdIDnh4yMm62NhYMivFF3wCNs5lwMGevCx1R+gNImDrwVzIv/FQjXM3H/Ieus2FvlMA/8oET7zi
+        5VfNRfAJMOYusA1BGwuCpgCauMTREVZv2KxKU3eYKwD/zOQvxFkBqEVoCaC09fOHd6KiITpaP716sQ9U
+        pgoQMo4hOAGPj6PHYA/T3wXwvf91EhCOuISA9M8YyFzOwPM89oUICzEW+jZZmcXA9u8ZiIvkBCxCuCOs
+        KuwR5PB/mYPpTd+gqUwdqb5PFVsRVhVSBDi3doOo+MnQLiSCDBQfwoeWmccABZu0YsD70HvgaCoA3+ms
+        KogAa6kJChFEAP4xtodPe5A6cyXyPMR2MylDQBt3b5DJfaxWAJ6oOIOgA8RUIIIR5kYyogFB96tEvPRz
+        Oob5F7sW3N4W48OKAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="Notificador.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAgGBhAPDQ0NDxAPDQ0NDQ0NDQ0NDw8NDQ0NEQ8TEhEOEBAV
