--- a/General/GUI/EmpleadoEdicion.resx
+++ b/General/GUI/EmpleadoEdicion.resx
@@ -120,82 +120,81 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="label1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAdgAAAHYAfpcpnIAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAARB0lEQVR4XtWbCXiOVxbHswdZSCQiERIksoiQDbHFFqG2FqV2Edsk2lhjbxDaaRVNFdOipZYSuw5q
-        X4ogUu20FK2tU111zNPpPFNdcub8z5v39S33+5JYOp37PL/ne5f7nnvOee9y7r3v5/A7pACmD5PLvM0U
-        M9eYfzA/l4JjXMO9DQzy4pkazP9lasosZj5mShiyxNO7GvkF1BJwrMrD4NmPmEVMEvOHTt7MZOYTxjCi
-        blgU9RmSSTNfXEmvbzlO+89/S0Wfk8HZm0Snrv1Gxz79lbafvEX5647QxLzXqEf/0VSnXoSpM8BFBmWg
-        rD9Mqs7MdXB0/Cf/iqKN4pvTlHlLae+5L82MLYuzN0voxNXf6MilX+hwKZuP36RnZr1CUY2bGo5wdHS8
-        w79zGF/mf5acmJGszPf8S65ubiVPDBhFW45cUhpXEc4yJy0cAVbv+Zi6PjmcXFzddEfc5t8MxpH5XVMD
-        ppAhJydnenJoFu05+4XSmAcBzeO9z6wdsenoder+1ChycnbWa8UpJpz5XVIv9rxU98iYeFq964xS+YfJ
-        6esldOSyuRPAa9uKKLpxM702/It/+0PBR5VQ5fMZeeujJ86lMzd+UypcHgqv/Sy1Bpy+9osyjymoDceu
-        /GrlhIMXfqKhY2eZ1gaMPtD1oSY3ZiNDvv4BJa8VHFUqaY8jF/5JefnrKLV7P6ruX1NXVnByciL/gCDq
-        1OMpem7pRjp28QeljCJ2wgluEpZOAIvWHCCf6gG6TMQb0PmhJAjay1BwSP2SnSevqZWzwfFLP1LWlOfI
-        y2Ssd3dzofAQP0puEirgGNf0+95Vq9Ez01+kk5/+RykTI4XKCev2X6agOvV0OdD5gZ2AqiRvvkF0E9r3
-        /tdKhWzx1u5zFBBUWxRyc3WmIT0TacvLQ+nr92bTnTPzzPjqeK7caxDqbzgiKDiE1u4pVsq25YQtJ/5O
-        9SIa6TJQEx6oOUibx5uvqPGoyu6VKosivVJj6cMdE62MVhFZr4Y806l5qPxWqlyZnl9eoCwDI4QtJ5jU
-        BESR95XQo3J7DSjZceKqUgF7oBq7ODvRgsndlYaq+PzwLHLm/iAk0Ju+PZhFL09qT64uTuTMHVz+mj3W
-        5XCfcFzRMQI0B5M+oS8MqkhqgGEFvf39dHjFN3+igmXZdPCNMUpDbbFoSg9RuF+nSHEAWDOnCzvFkTy9
-        vKng8EWrsjA6qIZIsHD1fhkd2JYfWG6YWFaOhDYjQQ6GOssCy8MXH2xSGmiP24VzKbq+9sYSomoaDgC5
-        o1rI9caJLZXlFXKcoHIAwBCJZ5mTTLkixpEMxcQ1q/A4v2zjIUpp155uHpqpNNIe87K76IoKB5b1NRzw
-        9YFMSmqoDZ0LVmxXlm2rP0CcEBGToMtF2Gw3+XJ1+R5V31bva4/w6MZS0NmCcUojbXGAm0rlSq48UrhS
-        1uC+IiMtOdSsFuxc9IRcj2qUoCzbXlNYvrmQHLlvYdswd/BhbKa5jMT2qkLsseHdD0TBsDp+SiNtcfSt
-        TPLx1kaLl6aNp1+uFFFkaB05Xz+/m5kTYur7yfVdhTeUOmACpXIA6NZ3hDzLYBapTN6Y0mJWdz8Tm6en
-        vSAF5GS0UxpqyT9O58kIUak0ABqXPoDo6vvCrkXz5Vqgnyd9XJBuOGBauhb3T5yTr9QBs0hbtWDjkasy
-        i+RagKm0cj0BCw2EKa1KeFmk9ewvym1fkq40WOfLY7m0Mq8vNQzT2rQzhsqp4wzjhXOHKb17Z7nftGEg
-        ffHuGHHA1gU95VqPfsOVOgBbARJ4rE+6PM9MYqySrOTc73y+UUKyCD+zKdswFsfo3DL7t6BB3ROoRVyo
-        Wcib2CiainasMze+1AE/Ht/Do0EDyTduQII44PzbQ+U8uW1npQ4AfYHKePDm7o/0si8wZgnrbbKSoxJa
-        HupHxIhwBDMw/o35/TiIMWZoBtW8veipbmm0f80ya8N12AFUdJhu7dlMvpwfYXSPlDAa8XisyEBnq9JB
-        5/in6uAIRMYm6bokMEbCFJKmzF+mFFgesPYHGV9xnI/27efjwQ5woRenZlPBkhdozxtL6MqhHfTrlXNq
-        o00pdQDo2NQYwgxQlkoHHXtxwTOz8nU5LzFGwsorVXQNzxRTB3y0c5IcpzRLUBtYFiYOSGUZkLVt+UIa
-        3b+3HJflABkSFcYDrCZBBvMhIwnr9iVlCS0LUwcUbx0vx6mtmqsNLAuFAz49vJO+4+s4Lo+uqsUTneDQ
-        cMjBkrs/IxsQsnStElReHrUDCresoemZGeV2gL3RAOuJkMP0Zhxm4wTr9ipB5SW0fqQIxVz/UTjAlPI4
-        wF4/MGHucl3WLEa2omjF1veUgsqLqQMuvJMjx62T4tQG2uOzYhZ4zwGtmmiLG7Hh/tS7vTYsoiyVDqac
-        vmHbAS+v1ZoSs55xOIeTfe9/oxRUXkwd8N2puTKvr1u7ltpIe3AobOqAOjVryJoAgqEv9o4ptwMQFaqM
-        B1gwgRymiHG4gUVJ7MqoBJUXUwcgDoioWwNhJ904vlttqC0unGKBmvHXd20QmZGhvhIIVcQBwFZYfOji
-        XZkcsSxsyDrc9vD0VgqoCJYOmDAsRc7nTchSG6riM+b9oyxQc0DemOEiY+KgxIfqAFDFwwuyvmMc7vrX
-        rKUUUBEsHXB+2wSJ4BD5fVt0SG2wJRdPszDN+K/3baWqnh4io2jt4PtywFE7Q2H1GkEsy/HuQ3OAvhag
-        h8IAcwBcQ0B099IZtdE6aPulvf/dU/upTZwW9mb2jRPjwdVdI+VaWaGwjj0HYFsetjMO32PNXiWgIrRJ
-        1dbzTm542nAAYoLEhsFyvUOLpnS7+Iht44u1qv/dge3UISlenomPCqDPd482HHDktX5yPaVTT6UOlthr
-        Ah5eVSELCyQON1xcXB+4Exw5PleUmzG6o+EAcHnvVIqNCJR7AX6+lP/sZLpz/tg94y8W8ps/QncO76KX
-        J2ZRgK+P5G0U5k8XNt9bCwA5Q7Ut8lHjZyt1sMRmJ/jJzzwNl1npdUaGAnq3+CulkPLyTuFNWYH19/UU
-        o02dcOvosxRc897OkAvnaxYbTX06plCfDinUnKfFuKbfD67hRTf+OsrMeDjD36eKlIGyVDqYYm8YxDcH
-        pWWdZbRAaNX2k0pBFaHvsLEiGNtd1w/OMHOCvgAyrHcPqhWgbX6YgmvpfbRmFF2vupnxl7dnULMYrRah
-        DFXZltgLhPLXH9XLlUBIQuHchW8qBVWEk5/9JKvJkBcS5EPblgyzcgCqfwlHe7dO7aNzO9cLOMY13EMe
-        UwdsfqEHB0Pech3rFShDVbYl9kLhyfNXiDwGH2Npk6FeA0crBVWU9y7/mzo/MVAvgDq3jqTja7MovHTP
-        z2ZHyOAe8oTX9qHD3OFhZViX06XXIJGtKlOFvclQ177apIqRyRA+RSsJj4pVCrpflm44YMwQTbEXE3xz
-        9qBV/uCQ+jb3Bu1hbzocGhYN2ZgOG5/hXUBouKfollLY/YC3NWCENis05cvC/UrjAe5Z5oeMirx5wc66
-        IBZEEKKzbCwCGUmWxHLyXlULrCCLV/+VAoO16uvs5k51ktKoio+27fX3k3uVxgPcQx7kxTN4FueQBZmq
-        slSculbxJTFZFI1vnqIUaI9TV+/KLhLWE7ChEpvQQvcw+YZGU5M+46jpkFnkWUP7TsDe5Aj3kAd58Qye
-        hQxcg0zIRhkoC2WibJVO9hZFY5NaizzGbFEU6RIKKTh0QSnUlEN/+16++sBSOIIoftYKT/9gajp4phgC
-        vAPryvWrR99RGg9wD3mQV38OMiDLVLYOyoYO0AU6QTd7y+Kr3vlAfznYArBKOUyZS2MYLjF7RF7g7uVD
-        /uFxFNamF8X3nUitxiwgj+qlkV9kkmGIT21tMQMhMZbEMezphuN43+qlcg95kFd/DjJwDTIhG2WgLJSJ
-        snFP7rNOsxevsbs91r2fNpdglBsj2C664+ZeyebWGLbLOQ/PpZ0ptFkXajN2MT02u8CKttlLyN1Ti/zq
-        tewhhtSIMF/aquTuRg3D6ws4Nr2HvHimbovucg5ZkKkqq03WYtEFOiFvxri5SuPR+bFtqAHYGvNilGk+
-        o9weW/D6NinAtZIHJWfkKZUxJYQ7MeT3D4sTY2ondJTzTpHR1D48gjzctQ4O4Lh9gwi5h3PkxTP+YU3k
-        HLJUZZiSPHwuubhXkfx5S7daOcBkW8zm5igStsdvOzs7l2zY96FhPKIvv4AgaT9QTKWAKQ3aabM2Z1d3
-        ath1hDwTltJHro1Ibkmfz35OuDgtlz6ZPts4z2jeUvIgL55p+FiGyMA1yFSVpdMldyPF9srivI7kz1Pd
-        /R/92zB+xY5imfyw/t+yrGqM3TSCoajYROMDxrxX1osSgQ2TlYWbkbuJnLhzEuO7acaLMXwMGe3CGxgG
-        W9I2TOsnYrqNNHsOsiATspVlMh1yVlLbcUuMWjNz4Tox/sCF/1B4dJxcY9KZMpPxiUxmznxxQNfeQ0RA
-        0sBpysLNYCXdqnjzrM2FEgZMMQxJ5GfRTgO8vJXGA39PL8mTNHD6vecGTBVZblW8bDogbeY6MR406jla
-        dE17fIg4YHj2HN34cn8igxTG1eUHfCmy7O2DMv7yNeow6XWlApYEN2kr+UO4c9INAVV8tQlR0cSpVsaf
-        mTBF7nn4Bpo9Uze5q1yHTFVZqPrtxi81HJA8cp7kj4lvQS+9ua/0IyknfCRVj6lQ6sdQNV+/Ev3T1rQZ
-        65RKWNJy1J8lv7tHVUoaNMMwBh0irq/qP9jKASufGiT3/MPjzRyAKo2+p+XI5xVlbaL2k/5iGA/ajF0k
-        cnz9alJVH+2LEuZJ5r4SPjLUhZTbASAgIlGe0Xt0ENr8MbmW1bqtlQMyW2mryKHNu5o5oFn6bHaowvjc
-        Auo4ZZWZ8aYOMGEBc98J/QEWDURY+wnLrRWxQdvsV8nZxY07Lzdq3OtpMaZRT21VN6F2HSsHxAdroXJs
-        zz8ZxjdPn0NdZm1Qyk+d+oaV8SB5RJ5uOFjHPPCfKfDB8W6G23AAtX3mFaVCKsLbaV98VasVZhjlWtmT
-        XLhvwRCoG49j7CSho9PzBce1o6i0oUq5qYo3D5oNe5YqVzOqPXR2ZR5KghPgTWnXzYbmKhWzpPPM9UZY
-        jKgOhlUPbSjnawYOMxyweoD26Uv1ujGSJ6Sp9n2Qb0iUuUweBTqWDneWNO49VpyL55i1zEP7XF5PqEqY
-        Qsq2EgKTLs9uNFdQATpEDGMYx2O6jzZ69VEtWhkOQHCEa3ASAifJz5i2fZRl2eGBlOx86Vu4p9eN/zPz
-        SP9DZPxlxrtmqI3e2ZyoToNFuUrevtLGEa2F+PgaDgj1rS7XYh/P5Dw45kAsbYjxfNqMtWZDnU7iwCms
-        Q4jk55fyI/8+0r/MmKa6zAlGApc6ian2O0iuunqE5stNAGM9jg9mZtMBBse4hiqPY8z08AzeesecFVaG
-        J2fMpcAYrDsYbx26hDK/a0I1G8q14Rv+lR4fk5Y2mQuVTuiYs4oqV9UWRtHZ4TenQyea3D5VjvX2izwd
-        Jq/kXv5Nq7eeNHg6BcW2luaBvPzWEdsjvH2gP0U8aMI0OpcdIf8fBHiTmMi0n/AXMye0Gv2CMbkBTWoF
-        C/q5s6sb9+S51Hb8q/feNg9r4e2epKpB9Y18bDia4DymKvOHSR5MNoP/C2vKcgTnFVBHmgjafnLGPIrq
-        rPX4wJHbPdDPw1J6UVy/CRSZOpCCGrUsHUHu3WeuMOMYT+YPnWIZ9Mbnmd8YUyMqApau8VXni4zVGt7/
-        S8L/e3syM5i3GPzL8ypzm5vNLwy2qPH3eWxUnmYQeWLRAs/4MY8wOTj8F1erjtZHDa5UAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        2AAAAdgB+lymcgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABEHSURBVHhe1ZsJ
+        eI5XFsezB1lIJCIREiSyiJANscUWobYWpXYR2yTaWGNvENppFU0V06KllhK7DmpfiiBS7bQUra1TXXXM
+        0+k8U11y5vzPm/f1Lff7klg6nfs8v+d7l/uee85573Luve/n8DukAKYPk8u8zRQz15h/MD+XgmNcw70N
+        DPLimRrM/2VqyixmPmZKGLLE07sa+QXUEnCsysPg2Y+YRUwS84dO3sxk5hPGMKJuWBT1GZJJM19cSa9v
+        OU77z39LRZ+TwdmbRKeu/UbHPv2Vtp+8RfnrjtDEvNeoR//RVKdehKkzwEUGZaCsP0yqzsx1cHT8J/+K
+        oo3im9OUeUtp77kvzYwti7M3S+jE1d/oyKVf6HApm4/fpGdmvUJRjZsajnB0dLzDv3MYX+Z/lpyYkazM
+        9/xLrm5uJU8MGEVbjlxSGlcRzjInLRwBVu/5mLo+OZxcXN10R9zm3wzGkfldUwOmkCEnJ2d6cmgW7Tn7
+        hdKYBwHN473PrB2x6eh16v7UKHJydtZrxSkmnPldUi/2vFT3yJh4Wr3rjFL5h8np6yV05LK5E8Br24oo
+        unEzvTb8i3/7Q8FHlVDl8xl566MnzqUzN35TKlweCq/9LLUGnL72izKPKagNx678auWEgxd+oqFjZ5nW
+        Bow+0PWhJjdmI0O+/gElrxUcVSppjyMX/kl5+esotXs/qu5fU1dWcHJyIv+AIOrU4yl6bulGOnbxB6WM
+        InbCCW4Slk4Ai9YcIJ/qAbpMxBvQ+aEkCNrLUHBI/ZKdJ6+plbPB8Us/UtaU58jLZKx3d3Oh8BA/Sm4S
+        KuAY1/T73lWr0TPTX6STn/5HKRMjhcoJ6/ZfpqA69XQ50PmBnYCqJG++QXQT2vf+10qFbPHW7nMUEFRb
+        FHJzdaYhPRNpy8tD6ev3ZtOdM/PM+Op4rtxrEOpvOCIoOITW7ilWyrblhC0n/k71IhrpMlATHqg5SJvH
+        m6+o8ajK7pUqiyK9UmPpwx0TrYxWEVmvhjzTqXmo/FaqXJmeX16gLAMjhC0nmNQERJH3ldCjcnsNKNlx
+        4qpSAXugGrs4O9GCyd2Vhqr4/PAscub+ICTQm749mEUvT2pPri5O5MwdXP6aPdblcJ9wXNExAjQHkz6h
+        LwyqSGqAYQW9/f10eMU3f6KCZdl08I0xSkNtsWhKD1G4X6dIcQBYM6cLO8WRPL28qeDwRauyMDqohkiw
+        cPV+GR3Ylh9YbphYVo6ENiNBDoY6ywLLwxcfbFIaaI/bhXMpur72xhKiahoOALmjWsj1xoktleUVcpyg
+        cgDAEIlnmZNMuSLGkQzFxDWr8Di/bOMhSmnXnm4emqk00h7zsrvoigoHlvU1HPD1gUxKaqgNnQtWbFeW
+        bas/QJwQEZOgy0XYbDf5cnX5HlXfVu9rj/DoxlLQ2YJxSiNtcYCbSuVKrjxSuFLW4L4iIy051KwW7Fz0
+        hFyPapSgLNteU1i+uZAcuW9h2zB38GFsprmMxPaqQuyx4d0PRMGwOn5KI21x9K1M8vHWRouXpo2nX64U
+        UWRoHTlfP7+bmRNi6vvJ9V2FN5Q6YAKlcgDo1neEPMtgFqlM3pjSYlZ3PxObp6e9IAXkZLRTGmrJP07n
+        yQhRqTQAGpc+gOjq+8KuRfPlWqCfJ31ckG44YFq6FvdPnJOv1AGzSFu1YOORqzKL5FqAqbRyPQELDYQp
+        rUp4WaT17C/KbV+SrjRY58tjubQyry81DNPatDOGyqnjDOOFc4cpvXtnud+0YSB98e4YccDWBT3lWo9+
+        w5U6AFsBEnisT7o8z0xirJKs5NzvfL5RQrIIP7Mp2zAWx+jcMvu3oEHdE6hFXKhZyJvYKJqKdqwzN77U
+        AT8e38OjQQPJN25Agjjg/NtD5Ty5bWelDgB9gcp48Obuj/SyLzBmCettspKjEloe6kfEiHAEMzD+jfn9
+        OIgxZmgG1by96KluabR/zTJrw3XYAVR0mG7t2Uy+nB9hdI+UMBrxeKzIQGer0kHn+Kfq4AhExibpuiQw
+        RsIUkqbMX6YUWB6w9gcZX3Gcj/bt5+PBDnChF6dmU8GSF2jPG0voyqEd9OuVc2qjTSl1AOjY1BjCDFCW
+        Sgcde3HBM7PydTkvMUbCyitVdA3PFFMHfLRzkhynNEtQG1gWJg5IZRmQtW35Qhrdv7ccl+UAGRIVxgOs
+        JkEG8yEjCev2JWUJLQtTBxRvHS/Hqa2aqw0sC4UDPj28k77j6zguj66qxROd4NBwyMGSuz8jGxCydK0S
+        VF4etQMKt6yh6ZkZ5XaAvdEA64mQw/RmHGbjBOv2KkHlJbR+pAjFXP9ROMCU8jjAXj8wYe5yXdYsRrai
+        aMXW95SCyoupAy68kyPHrZPi1Aba47NiFnjPAa2aaIsbseH+1Lu9NiyiLJUOppy+YdsBL6/VmhKznnE4
+        h5N973+jFFReTB3w3am5Mq+vW7uW2kh7cChs6oA6NWvImgCCoS/2jim3AxAVqowHWDCBHKaIcbiBRUns
+        yqgElRdTByAOiKhbA2En3Ti+W22oLS6cYoGa8dd3bRCZkaG+EghVxAHAVlh86OJdmRyxLGzIOtz28PRW
+        CqgIlg6YMCxFzudNyFIbquIz5v2jLFBzQN6Y4SJj4qDEh+oAUMXDC7K+Yxzu+tespRRQESwdcH7bBIng
+        EPl9W3RIbbAlF0+zMM34r/dtpaqeHiKjaO3g+3LAUTtDYfUaQSzL8e5Dc4C+FqCHwgBzAFxDQHT30hm1
+        0Tpo+6W9/91T+6lNnBb2ZvaNE+PB1V0j5VpZobCOPQdgWx62Mw7fY81eJaAitEnV1vNObnjacABigsSG
+        wXK9Q4umdLv4iG3ji7Wq/92B7dQhKV6eiY8KoM93jzYccOS1fnI9pVNPpQ6W2GsCHl5VIQsLJA43XFxc
+        H7gTHDk+V5SbMbqj4QBwee9Uio0IlHsBfr6U/+xkunP+2D3jLxbymz9Cdw7vopcnZlGAr4/kbRTmTxc2
+        31sLADlDtS3yUeNnK3WwxGYn+MnPPA2XWel1RoYCerf4K6WQ8vJO4U1ZgfX39RSjTZ1w6+izFFzz3s6Q
+        C+drFhtNfTqmUJ8OKdScp8W4pt8PruFFN/46ysx4OMPfp4qUgbJUOphibxjENwelZZ1ltEBo1faTSkEV
+        oe+wsSIY213XD84wc4K+ADKsdw+qFaBtfpiCa+l9tGYUXa+6mfGXt2dQsxitFqEMVdmW2AuE8tcf1cuV
+        QEhC4dyFbyoFVYSTn/0kq8mQFxLkQ9uWDLNyAKp/CUd7t07to3M71ws4xjXcQx5TB2x+oQcHQ95yHesV
+        KENVtiX2QuHJ81eIPAYfY2mToV4DRysFVZT3Lv+bOj8xUC+AOreOpONrsyi8dM/PZkfI4B7yhNf2ocPc
+        4WFlWJfTpdcgka0qU4W9yVDXvtqkipHJED5FKwmPilUKul+WbjhgzBBNsRcTfHP2oFX+4JD6NvcG7WFv
+        OhwaFg3ZmA4bn+FdQGi4p+iWUtj9gLc1YIQ2KzTly8L9SuMB7lnmh4yKvHnBzrogFkQQorNsLAIZSZbE
+        cvJeVQusIItX/5UCg7Xq6+zmTnWS0qiKj7bt9feTe5XGA9xDHuTFM3gW55AFmaqyVJy6VvElMVkUjW+e
+        ohRoj1NX78ouEtYTsKESm9BC9zD5hkZTkz7jqOmQWeRZQ/tOwN7kCPeQB3nxDJ6FDFyDTMhGGSgLZaJs
+        lU72FkVjk1qLPMZsURTpEgopOHRBKdSUQ3/7Xr76wFI4gih+1gpP/2BqOnimGAK8A+vK9atH31EaD3AP
+        eZBXfw4yIMtUtg7Khg7QBTpBN3vL4qve+UB/OdgCsEo5TJlLYxguMXtEXuDu5UP+4XEU1qYXxfedSK3G
+        LCCP6qWRX2SSYYhPbW0xAyExlsQx7OmG43jf6qVyD3mQV38OMnANMiEbZaAslImycU/us06zF6+xuz3W
+        vZ82l2CUGyPYLrrj5l7J5tYYtss5D8+lnSm0WRdqM3YxPTa7wIq22UvI3VOL/Oq17CGG1IgwX9qq5O5G
+        DcPrCzg2vYe8eKZui+5yDlmQqSqrTdZi0QU6IW/GuLlK49H5sW2oAdga82KUaT6j3B5b8Po2KcC1kgcl
+        Z+QplTElhDsx5PcPixNjaid0lPNOkdHUPjyCPNy1Dg7guH2DCLmHc+TFM/5hTeQcslRlmJI8fC65uFeR
+        /HlLt1o5wGRbzObmKBK2x287OzuXbNj3oWE8oi+/gCBpP1BMpYApDdppszZnV3dq2HWEPBOW0keujUhu
+        SZ/Pfk64OC2XPpk+2zjPaN5S8iAvnmn4WIbIwDXIVJWl0yV3I8X2yuK8juTPU939H/3bMH7FjmKZ/LD+
+        37KsaozdNIKhqNhE4wPGvFfWixKBDZOVhZuRu4mcuHMS47tpxosxfAwZ7cIbGAZb0jZM6ydiuo00ew6y
+        IBOylWUyHXJWUttxS4xaM3PhOjH+wIX/UHh0nFxj0pkyk/GJTGbOfHFA195DREDSwGnKws1gJd2qePOs
+        zYUSBkwxDEnkZ9FOA7y8lcYDf08vyZM0cPq95wZMFVluVbxsOiBt5joxHjTqOVp0TXt8iDhgePYc3fhy
+        fyKDFMbV5Qd8KbLs7YMy/vI16jDpdaUClgQ3aSv5Q7hz0g0BVXy1CVHRxKlWxp+ZMEXuefgGmj1TN7mr
+        XIdMVVmo+u3GLzUckDxynuSPiW9BL725r/QjKSd8JFWPqVDqx1A1X78S/dPWtBnrlEpY0nLUnyW/u0dV
+        Sho0wzAGHSKur+o/2MoBK58aJPf8w+PNHIAqjb6n5cjnFWVtovaT/mIYD9qMXSRyfP1qUlUf7YsS5knm
+        vhI+MtSFlNsBICAiUZ7Re3QQ2vwxuZbVuq2VAzJbaavIoc27mjmgWfpsdqjC+NwC6jhllZnxpg4wYQFz
+        3wn9ARYNRFj7CcutFbFB2+xXydnFjTsvN2rc62kxplFPbVU3oXYdKwfEB2uhcmzPPxnGN0+fQ11mbVDK
+        T536hpXxIHlEnm44WMc88J8p8MHxbobbcAC1feYVpUIqwttpX3xVqxVmGOVa2ZNcuG/BEKgbj2PsJKGj
+        0/MFx7WjqLShSrmpijcPmg17lipXM6o9dHZlHkqCE+BNadfNhuYqFbOk88z1RliMqA6GVQ9tKOdrBg4z
+        HLB6gPbpS/W6MZInpKn2fZBvSJS5TB4FOpYOd5Y07j1WnIvnmLXMQ/tcXk+oSphCyrYSApMuz240V1AB
+        OkQMYxjHY7qPNnr1US1aGQ5AcIRrcBICJ8nPmLZ9lGXZ4YGU7HzpW7in143/M/NI/0Nk/GXGu2aojd7Z
+        nKhOg0W5St6+0sYRrYX4+BoOCPWtLtdiH8/kPDjmQCxtiPF82oy1ZkOdTuLAKaxDiOTnl/Ij/z7Sv8yY
+        prrMCUYClzqJqfY7SK66eoTmy00AYz2OD2Zm0wEGx7iGKo9jzPTwDN56x5wVVoYnZ8ylwBisOxhvHbqE
+        Mr9rQjUbyrXhG/6VHh+TljaZC5VO6JiziipX1RZG0dnhN6dDJ5rcPlWO9faLPB0mr+Re/k2rt540eDoF
+        xbaW5oG8/NYR2yO8faA/RTxowjQ6lx0h/x8EeJOYyLSf8BczJ7Qa/YIxuQFNagUL+rmzqxv35LnUdvyr
+        9942D2vh7Z6kqkH1jXxsOJrgPKYq84dJHkw2g/8La8pyBOcVUEeaCNp+csY8iuqs9fjAkds90M/DUnpR
+        XL8JFJk6kIIatSwdQe7dZ64w4xhP5g+dYhn0xueZ3xhTIyoClq7xVeeLjNUa3v9Lwv97ezIzmLcY/Mvz
+        KnObm80vDLao8fd5bFSeZhB5YtECz/gxjzA5OPwXV6uO1kcNrlQAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -235,6 +234,9 @@
         RK5CYII=
 </value>
   </data>
+  <metadata name="Notificador.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAgGBhAPDQ0NDxAPDQ0NDQ0NDQ0NDw8NDQ0NEQ8TEhEOEBAV
